# BTA

./: .clang-format  .gitmodules  CMakeLists.txt
.github/: build-project.yml  clang-format-check.yml
src/: BTAudioCard.cpp  CMakeLists.txt  main.cpp
src/bta/: BTADeviceDriver.cpp  BTADeviceDriver.h  BTADeviceFactory.cpp  BTADeviceFactory.h  BTASerialDevice.cpp  BTASerialDevice.h  BTAVersionInfo.h  CMakeLists.txt
src/bta/components/: BTAPairingManager.cpp  BTAPairingManager.h  BTASerialDevice.cpp  BTASerialDevice.h  BTAVersionInfo.h  ToneControl.cpp  ToneControl.h
src/bta/devices/: BC127.cpp  BC127.h  BT12.cpp  BT12.h  IDC777.cpp  IDC777.h
src/bta/interfaces/: BTAStatusTable.h
src/platform/linux_x86/: CMakeLists.txt  CPPInterfaces.h  CriticalSection.cpp  CriticalSection.h  ExtIO.cpp  IO.cpp  IO.h  TimeDelta.h  types.h  uart.cpp  uart.h
src/platform/linux_x86/interfaces/: Observable.h  iuart.h
src/port/linux_x86/: CriticalSection.h  ExtIO.h  IO.h  ScopeExit.h  TimeDelta.cpp  TimeDelta.h  types.h  uart.cpp  uart.h
test/: CMakeLists.txt  GTestCreateMacro.txt
test/mocks/bta/: BTASerialDevice.h
test/mocks/platform/linux_x86/: TimeDelta.h
test/src/: CMakeLists.txt
test/src/bta/: CMakeLists.txt
test/src/bta/devices/: CMakeLists.txt  IDC777_test.cpp
